# oplab_mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  COST_MANAGEMENT.md  Dockerfile  FERRAMENTAS.md  INDEX.md  README.md  cloudbuild.yaml  deploy.sh  eslint.config.js  package-lock.json  package.json  pyproject.toml  server.py  tsconfig.json
.claude/: settings.json
.claude/rules/: express-stream.md  infra.md  mcp.md
src/: index.ts
src/utils/: backtest_engine.ts  backtest_estrutural_engine.ts  bs_engine.ts  estrutura_engine.ts  iv_calculator.ts  manejo_engine.ts  opportunity_engine.ts  smart_money_tracker.ts  whitelist_source.ts
