[project]
name = "oplab-mcp-server"
version = "0.1.0"
description = "MCP server for OpLab stock market API"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3.3",
    "httpx>=0.28.1",
]

[project.scripts]
oplab-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
